@@ -41,8 +41,11 @@ import org.meveo.admin.exception.BusinessException;
 import org.meveo.admin.util.ResourceBundle;
 import org.meveo.commons.utils.ParamBean;
 import org.meveo.commons.utils.QueryBuilder;
+import org.meveo.model.IBillableEntity;
+import org.meveo.model.IEntity;
 import org.meveo.model.billing.BillingAccount;
 import org.meveo.model.billing.BillingCycle;
+import org.meveo.model.billing.BillingEntityTypeEnum;
 import org.meveo.model.billing.BillingProcessTypesEnum;
 import org.meveo.model.billing.BillingRun;
 import org.meveo.model.billing.BillingRunStatusEnum;
@@ -67,8 +70,9 @@ import org.meveo.service.base.PersistenceService;
  * 
  * @author Edward P. Legaspi
  * @author Wassim Drira
- * @author Tien Lan PHUNG 
- * @lastModifiedVersion 5.0.6
+ * @author Tien Lan PHUNG
+ * @author Abdelmounaim Akadid 
+ * @lastModifiedVersion 5.1
  * 
  */
 @Stateless
@@ -435,7 +439,7 @@ public class BillingRunService extends PersistenceService<BillingRun> {
             try {
                 Thread.sleep((10 - count) * 1000);
             } catch (InterruptedException e) {
-            	log.warn("Warning on thread sleep={}", e.getMessage());
+                log.warn("Warning on thread sleep={}", e.getMessage());
             }
             refresh(billingRun);
             log.info("BillingRun {} has status {}. COUNT:{}.", billingRunId, billingRun.getStatus(), count);
@@ -488,7 +492,7 @@ public class BillingRunService extends PersistenceService<BillingRun> {
         log.info("> cleanBillingRun >> Collect Invoice Aggregates > {}", System.currentTimeMillis() - start);
 
         for (Long invoiceAgregate : invoiceAgregates) {
-        	invoiceAgregateService.setInvoiceToNull(invoiceAgregate);
+            invoiceAgregateService.setInvoiceToNull(invoiceAgregate);
             remove(InvoiceAgregate.class, invoiceAgregate);
         }
         log.info("> cleanBillingRun >> Invoice Aggregated will be Removed  > {}", System.currentTimeMillis() - start);
@@ -583,18 +587,19 @@ public class BillingRunService extends PersistenceService<BillingRun> {
     }
 
     /**
-     * Gets the billing account ids.
+     * Gets entities.
      *
      * @param billingRun the billing run
-     * @return the billing account ids
+     * @return the entity objects
      */
-    public List<Long> getBillingAccountIds(BillingRun billingRun) {
+    public List<? extends IBillableEntity> getEntities(BillingRun billingRun) {
 
         BillingCycle billingCycle = billingRun.getBillingCycle();
 
         log.debug("getBillingAccount ids for billingRun {}", billingRun.getId());
 
         if (billingCycle != null) {
+            
             Date startDate = billingRun.getStartDate();
             Date endDate = billingRun.getEndDate();
 
@@ -602,48 +607,97 @@ public class BillingRunService extends PersistenceService<BillingRun> {
                 endDate = new Date();
             }
 
-            return billingAccountService.findBillingAccountIds(billingCycle, startDate, endDate);
-
+            if(billingCycle.getType() == BillingEntityTypeEnum.SUBSCRIPTION) { 
+                return billingAccountService.findSubscriptions(billingCycle, startDate, endDate);
+            }
+            
+            if(billingCycle.getType() == BillingEntityTypeEnum.ORDER) { 
+                return billingAccountService.findOrders(billingCycle, startDate, endDate);
+            }
+            
+            return billingAccountService.findBillingAccounts(billingCycle, startDate, endDate);
         } else {
-            List<Long> result = new ArrayList<Long>();
+            List<BillingAccount> result = new ArrayList<BillingAccount>();
             String[] baIds = billingRun.getSelectedBillingAccounts().split(",");
 
             for (String id : Arrays.asList(baIds)) {
-                Long baId = Long.valueOf(id);
-                result.add(baId);
+                //Long baId = Long.valueOf(id);
+                //result.add(baId);
+                result.add(billingAccountService.findById(new Long(id)));
             }
-
             return result;
         }
     }
 
     /**
-     * Creates the aggregates and invoice.
+     * Creates the agregates and invoice.
      * 
-     * @param billingRunId Billing run id
-     * @param nbRuns Number of runs
-     * @param waitingMillis Waiting millis
-     * @param jobInstanceId The job instance id
-     * @param billingAccountIds List of billing account id
-     * @throws BusinessException Business exception.
+     * @param billingRun the billing run
+     * @param nbRuns the nb runs
+     * @param waitingMillis the waiting millis
+     * @param jobInstanceId the job instance id
+     * @throws BusinessException the business exception
      */
     @SuppressWarnings("unchecked")
     @TransactionAttribute(TransactionAttributeType.NOT_SUPPORTED)
-    public void createAgregatesAndInvoice(Long billingRunId, long nbRuns, long waitingMillis, Long jobInstanceId, List<Long> billingAccountIds) throws BusinessException {
+    public void createAgregatesAndInvoice(BillingRun billingRun, long nbRuns, long waitingMillis, Long jobInstanceId) throws BusinessException {
+        
+        List<? extends IEntity> entities = getEntities(billingRun);
+        
         SubListCreator subListCreator = null;
+
         try {
-            if (billingAccountIds == null) {
-                billingAccountIds = billingAccountService.findBillingAccountIdsByBillingRun(billingRunId);
-            }
-            subListCreator = new SubListCreator(billingAccountIds, (int) nbRuns);
+            subListCreator = new SubListCreator(entities, (int) nbRuns);
         } catch (Exception e1) {
-            throw new BusinessException("cannot create  agregates and invoice with nbRuns=" + nbRuns, e1);
+            throw new BusinessException("cannot create  agregates and invoice with nbRuns=" + nbRuns);
         }
 
         List<Future<String>> asyncReturns = new ArrayList<Future<String>>();
         MeveoUser lastCurrentUser = currentUser.unProxy();
         while (subListCreator.isHasNext()) {
-            asyncReturns.add(invoicingAsync.createAgregatesAndInvoiceAsync((List<Long>) subListCreator.getNextWorkSet(), billingRunId, jobInstanceId, lastCurrentUser));
+            asyncReturns.add(invoicingAsync.createAgregatesAndInvoiceAsync(subListCreator.getNextWorkSet(), billingRun, jobInstanceId, lastCurrentUser));
+            try {
+                Thread.sleep(waitingMillis);
+            } catch (InterruptedException e) {
+                log.error("Failed to create agregates and invoice waiting for thread", e);
+                throw new BusinessException(e);
+            }
+        }
+        for (Future<String> futureItsNow : asyncReturns) {
+            try {
+                futureItsNow.get();
+            } catch (InterruptedException | ExecutionException e) {
+                log.error("Failed to create agregates and invoice getting future", e);
+                throw new BusinessException(e);
+            }
+        }
+
+    }
+
+    /**
+     * Creates the agregates and invoice.
+     * 
+     * @param billingRun billing run
+     * @param nbRuns nb of runs
+     * @param waitingMillis waiting millis
+     * @param jobInstanceId the job instance id
+     * @param entities list of entities
+     * @throws BusinessException business exception.
+     */
+    @SuppressWarnings("unchecked")
+    @TransactionAttribute(TransactionAttributeType.NOT_SUPPORTED)
+    public void createAgregatesAndInvoice(BillingRun billingRun, long nbRuns, long waitingMillis, Long jobInstanceId, List<? extends IBillableEntity> entities) throws BusinessException {
+        SubListCreator subListCreator = null;
+        try {
+            subListCreator = new SubListCreator(entities, (int) nbRuns);
+        } catch (Exception e1) {
+            throw new BusinessException("cannot create  agregates and invoice with nbRuns=" + nbRuns);
+        }
+
+        List<Future<String>> asyncReturns = new ArrayList<Future<String>>();
+        MeveoUser lastCurrentUser = currentUser.unProxy();
+        while (subListCreator.isHasNext()) {
+            asyncReturns.add(invoicingAsync.createAgregatesAndInvoiceAsync(subListCreator.getNextWorkSet(), billingRun, jobInstanceId, lastCurrentUser));
             try {
                 Thread.sleep(waitingMillis);
             } catch (InterruptedException e) {
@@ -672,8 +726,8 @@ public class BillingRunService extends PersistenceService<BillingRun> {
      */
     @SuppressWarnings("unchecked")
     @TransactionAttribute(TransactionAttributeType.NOT_SUPPORTED)
-    public void assignInvoiceNumberAndIncrementBAInvoiceDates(Long billingRunId, long nbRuns, long waitingMillis, Long jobInstanceId) throws BusinessException {
-        List<InvoicesToNumberInfo> invoiceSummary = invoiceService.getInvoicesToNumberSummary(billingRunId);
+    public void assignInvoiceNumberAndIncrementBAInvoiceDates(BillingRun billingRun, long nbRuns, long waitingMillis, Long jobInstanceId) throws BusinessException {
+        List<InvoicesToNumberInfo> invoiceSummary = invoiceService.getInvoicesToNumberSummary(billingRun.getId());
         // Reserve invoice number for each invoice type/seller/invoice date combination
         for (InvoicesToNumberInfo invoicesToNumberInfo : invoiceSummary) {
             Sequence sequence = serviceSingleton.reserveInvoiceNumbers(invoicesToNumberInfo.getInvoiceTypeId(), invoicesToNumberInfo.getSellerId(),
@@ -683,13 +737,13 @@ public class BillingRunService extends PersistenceService<BillingRun> {
 
         // Find and process invoices
         for (InvoicesToNumberInfo invoicesToNumberInfo : invoiceSummary) {
-            List<Long> invoices = invoiceService.getInvoiceIds(billingRunId, invoicesToNumberInfo.getInvoiceTypeId(), invoicesToNumberInfo.getSellerId(),
+            List<Long> invoices = invoiceService.getInvoiceIds(billingRun.getId(), invoicesToNumberInfo.getInvoiceTypeId(), invoicesToNumberInfo.getSellerId(),
                 invoicesToNumberInfo.getInvoiceDate());
             // Validate that what was retrieved as summary matches the details
             if (invoices.size() != invoicesToNumberInfo.getNrOfInvoices().intValue()) {
                 throw new BusinessException(
                     String.format("Number of invoices retrieved %s dont match the expected number %s for %s/%s/%s/%s", invoices.size(), invoicesToNumberInfo.getNrOfInvoices(),
-                        billingRunId, invoicesToNumberInfo.getInvoiceTypeId(), invoicesToNumberInfo.getSellerId(), invoicesToNumberInfo.getInvoiceDate()));
+                    		billingRun.getId(), invoicesToNumberInfo.getInvoiceTypeId(), invoicesToNumberInfo.getSellerId(), invoicesToNumberInfo.getInvoiceDate()));
             }
 
             SubListCreator subListCreator = null;
@@ -797,20 +851,20 @@ public class BillingRunService extends PersistenceService<BillingRun> {
     public void validate(BillingRun billingRun, long nbRuns, long waitingMillis, Long jobInstanceId) throws Exception {
         log.debug("validate, billingRun id={} status={}", billingRun.getId(), billingRun.getStatus());
 
-        List<Long> billingAccountIds = getBillingAccountIds(billingRun);
+        List<? extends IBillableEntity> entities = getEntities(billingRun);
 
         if (BillingRunStatusEnum.NEW.equals(billingRun.getStatus())) {
 
             billingRunExtensionService.updateBRAmounts(billingRun.getId());
 
-            log.info("Nb billingAccounts to process={}", (billingAccountIds != null ? billingAccountIds.size() : 0));
-            if (billingAccountIds != null && billingAccountIds.size() > 0) {
-                int billableBA = 0;
-                SubListCreator subListCreator = new SubListCreator(billingAccountIds, (int) nbRuns);
+            log.info("Nb entities to process={}", (entities != null ? entities.size() : 0));
+            if (entities != null && entities.size() > 0) {
+                int billableEntities = 0;
+                SubListCreator subListCreator = new SubListCreator(entities, (int) nbRuns);
                 List<Future<Integer>> asyncReturns = new ArrayList<Future<Integer>>();
                 MeveoUser lastCurrentUser = currentUser.unProxy();
                 while (subListCreator.isHasNext()) {
-                    Future<Integer> count = invoicingAsync.updateBillingAccountTotalAmountsAsync((List<Long>) subListCreator.getNextWorkSet(), billingRun, jobInstanceId,
+                    Future<Integer> count = invoicingAsync.updateBillingAccountTotalAmountsAsync((List<IBillableEntity>)subListCreator.getNextWorkSet(), billingRun, jobInstanceId,
                         lastCurrentUser);
                     asyncReturns.add(count);
                     try {
@@ -820,27 +874,30 @@ public class BillingRunService extends PersistenceService<BillingRun> {
                     }
                 }
 
-                for (Future<Integer> futureItsNow : asyncReturns) {
-                    billableBA += futureItsNow.get().intValue();
+                if(billingRun.getBillingCycle().getType() == BillingEntityTypeEnum.BILLINGACCOUNT) {
+                    for (Future<Integer> futureItsNow : asyncReturns) {
+                        billableEntities += futureItsNow.get().intValue();
+                    }
+                } else {
+                    billableEntities = entities.size();
                 }
 
-                log.info("Total billableBA:" + billableBA);
-
-                billingRunExtensionService.updateBillingRun(billingRun.getId(), billingAccountIds.size(), billableBA, BillingRunStatusEnum.PREINVOICED, new Date());
+                log.info("Total billable entities:" + billableEntities);
+                billingRunExtensionService.updateBillingRun(billingRun.getId(), entities.size(), billableEntities, BillingRunStatusEnum.PREINVOICED, new Date());
 
                 if (billingRun.getProcessType() == BillingProcessTypesEnum.AUTOMATIC || appProvider.isAutomaticInvoicing()) {
                     log.info("Will proceed to create aggregates and invoice");
-                    createAgregatesAndInvoice(billingRun.getId(), nbRuns, waitingMillis, jobInstanceId, null);
+                    createAgregatesAndInvoice(billingRun, nbRuns, waitingMillis, jobInstanceId, entities);
                     billingRunExtensionService.updateBillingRun(billingRun.getId(), null, null, BillingRunStatusEnum.POSTINVOICED, null);
                 }
             }
 
         } else if (BillingRunStatusEnum.PREVALIDATED.equals(billingRun.getStatus())) {
-            createAgregatesAndInvoice(billingRun.getId(), nbRuns, waitingMillis, jobInstanceId, null);
+            createAgregatesAndInvoice(billingRun, nbRuns, waitingMillis, jobInstanceId, entities);
             billingRunExtensionService.updateBillingRun(billingRun.getId(), null, null, BillingRunStatusEnum.POSTINVOICED, null);
 
         } else if (BillingRunStatusEnum.POSTVALIDATED.equals(billingRun.getStatus())) {
-            assignInvoiceNumberAndIncrementBAInvoiceDates(billingRun.getId(), nbRuns, waitingMillis, jobInstanceId);
+            assignInvoiceNumberAndIncrementBAInvoiceDates(billingRun, nbRuns, waitingMillis, jobInstanceId);
             billingRunExtensionService.updateBillingRun(billingRun.getId(), null, null, BillingRunStatusEnum.VALIDATED, null);
         }
     }
@@ -862,13 +919,13 @@ public class BillingRunService extends PersistenceService<BillingRun> {
 
         case POSTINVOICED:
         case POSTVALIDATED:
-            assignInvoiceNumberAndIncrementBAInvoiceDates(billingRun.getId(), 1, 0, null);
+            assignInvoiceNumberAndIncrementBAInvoiceDates(billingRun, 1, 0, null);
             billingRunExtensionService.updateBillingRun(billingRun.getId(), null, null, BillingRunStatusEnum.VALIDATED, null);
             break;
 
         case PREINVOICED:
         case PREVALIDATED:
-            createAgregatesAndInvoice(billingRun.getId(), 1, 0, null, null);
+            createAgregatesAndInvoice(billingRun, 1, 0, null, null);
             billingRunExtensionService.updateBillingRun(billingRun.getId(), 1, 0, BillingRunStatusEnum.POSTINVOICED, null);
             break;
 
